# mlops-templates

./: .env.example  .gitignore  README.md  pyproject.toml
.dvc/: config
airflow/dags/: mnist_pipeline.py
configs/: config.yaml
configs/model/: mlp.yaml
configs/trainer/: default.yaml
docker/: .env.example  clearml-server.sh  docker-compose.airflow.yaml  docker-compose.airflow.yml  docker-compose.clearml.yml  docker-compose.mlflow.yaml  docker-compose.mlflow.yml  docker-compose.sftp.yaml
example_scripts/: onnx_export.py
example_scripts/langfuse_tracing/: python_sdk_example.py
example_scripts/llama_cpp_infer/: README.md  inference.sh  install.sh
example_scripts/opensearch_client/: embedding_example.py
example_scripts/vllm_infer/: offline.py
orchestration/dags/: mnist_pipeline.py
src/: datamodule.py  train.py
src/configs/: config.yaml
src/configs/logger/: clearml.yaml  mlflow.yaml  tensorboard.yaml  wandb.yaml
src/datamodules/: mnist_datamodule.py
src/models/: classifier.py  mlp.py  mnist_mlp.py
src/utils/: callbacks.py
